--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,5 @@
     "outDir": "dist",
     "esModuleInterop": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist"]
+  "include": ["src/**/*"]
 }
