--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
-    "lib": ["ES6", "DOM"],
-    "strict": true,
-    "sourceMap": true,
-    "outDir": "dist",
-    "esModuleInterop": true,
-    "types": ["chrome-types"]
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "ES6",
+        "lib": ["ES6", "DOM"],
+        "strict": true,
+        "sourceMap": true,
+        "outDir": "dist",
+        "esModuleInterop": true,
+        "types": ["chrome-types", "@types/dom-chromium-ai"],
+    },
+    "include": ["src/**/*"],
 }
