--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "sourceMap": true,
         "outDir": "dist",
         "esModuleInterop": true,
+        "moduleResolution":"node",
         "types": ["chrome-types", "@types/dom-chromium-ai"],
     },
     "include": ["src/**/*"],
