feat | added background service worker

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,17 @@
     "name": "nano form filler",
     "version": "1.0",
     "description": "Nano form filler is a smart form filler that helps you fill out forms in a single click with the help of nano Gemini",
-    "permissions": ["storage", "tabs", "activeTab", "scripting", "aiLanguageModelOriginTrial"],
+    "permissions": [
+        "storage",
+        "tabs",
+        "activeTab",
+        "scripting",
+        "aiLanguageModelOriginTrial",
+        "contentSettings"
+    ],
+    "background": {
+        "service_worker": "background.bundle.js"
+    },
     "action": {
         "default_popup": "popup.html"
     },
