--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,7 +22,8 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["content.bundle.js"]
+            "js": ["content.bundle.js"],
+            "css": ["content.css"]
         }
     ]
 }
